# Jimmy_robomaster

./: .gitignore  README.md
training/camera/: CMakeLists.txt  camera.cpp  camera_calibration.cpp
training/camera/calibrate_photos/: CMakeLists.txt
training/camera/real_camera/: CMakeLists.txt  main.cpp
training/lesson01/find_apple/: CMakeLists.txt  find_apple.cpp
training/lesson01/find_energy/: CMakeLists.txt  find_energy.cpp
training/opencv_basic/find_apple/: find_apple.cpp
training/transform/: CMakeLists.txt  car.jfif  transform.cpp
training/transform/deep_image/: CMakeLists.txt  data.yml  transform_2.cpp
training/transform/plate/: transform.cpp
